--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "dev2": "yarn vite",
     "build:types": "tsc --build --force",
     "build:applab": "yarn applab build",
-    "build": "rm -fr ./dist && yarn build:applab && yarn build:types",
+    "build": "yarn clean && yarn build:applab && yarn build:types",
+    "clean": "rm -fr ./dist",
     "lint:eslint": "yarn eslint ./src --ext js,ts,tsx --max-warnings 0",
     "lint:stylelint": "yarn stylelint '**/*.ts[x]'",
     "lint": "yarn lint:eslint && yarn lint:stylelint",
