--- a/applab.config.json
+++ b/applab.config.json
@@ -6,7 +6,7 @@
       "buildTypes": false,
       "bundle": true,
       "codeSplitting": true,
-      "excludeLibs": [],
+      "excludeLibs": ["react", "react-dom"],
       "define": {},
       "format": "esm",
       "inputScripts": ["src/index.tsx"],
@@ -23,7 +23,7 @@
       "buildTypes": false,
       "bundle": true,
       "codeSplitting": false,
-      "excludeLibs": [],
+      "excludeLibs": ["react", "react-dom"],
       "define": {},
       "format": "cjs",
       "inputScripts": ["src/index.tsx"],
