--- a/package.json
+++ b/package.json
@@ -56,7 +56,8 @@
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
     "react-router": "^6.2.1",
-    "react-router-dom": "^6.2.1"
+    "react-router-dom": "^6.2.1",
+    "styled-components": "^5.3.3"
   },
   "devDependencies": {
     "@microsoft/eslint-plugin-sdl": "^0.1.8",
@@ -155,8 +156,7 @@
     "react-date-picker": "8.3.6",
     "react-dropzone": "^11.7.0",
     "react-password-strength-bar": "^0.4.0",
-    "rgb-hex": "^4.0.0",
-    "styled-components": "^5.3.3"
+    "rgb-hex": "^4.0.0"
   },
   "browserslist": {
     "production": [
