--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "yui": "yarn upgrade-interactive"
   },
   "peerDependencies": {
-    "@srclaunch/web-application-state": "^0.1.14",
+    "@srclaunch/web-application-state": "^0.1.24",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
@@ -64,7 +64,7 @@
     "@srclaunch/cli": "^0.1.18",
     "@srclaunch/dx": "^0.1.2",
     "@srclaunch/types": "^0.1.2",
-    "@srclaunch/web-application-state": "^0.1.19",
+    "@srclaunch/web-application-state": "^0.1.24",
     "@stripe/stripe-js": "^1.22.0",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.2",
@@ -109,8 +109,14 @@
     "jest-junit": "^13.0.0",
     "prettier": "^2.5.1",
     "prettier-eslint": "^13.0.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-redux": "^7.2.6",
+    "react-router": "^6.2.1",
+    "react-router-dom": "^6.2.1",
     "rollup-plugin-typescript2": "^0.31.2",
     "standard-version": "^9.3.2",
+    "styled-components": "^5.3.3",
     "stylelint": "^14.3.0",
     "stylelint-config-idiomatic-order": "^8.1.0",
     "stylelint-config-prettier": "^9.0.3",
