--- a/package.json
+++ b/package.json
@@ -11,16 +11,16 @@
     "access": "public",
     "registry": "https://registry.npmjs.org/"
   },
-  "main": "./dist/index.es.js",
+  "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "files": [
     "package.json",
     "dist"
   ],
-  "module": "./dist/index.es.js",
+  "module": "./dist/index.js",
   "exports": {
     ".": {
-      "import": "./dist/index.es.js",
+      "import": "./dist/index.js",
       "require": "./dist/index.cjs.js"
     }
   },
@@ -64,7 +64,7 @@
     "@srclaunch/cli": "^0.1.18",
     "@srclaunch/dx": "^0.1.2",
     "@srclaunch/types": "^0.1.2",
-    "@srclaunch/web-application-state": "^0.1.25",
+    "@srclaunch/web-application-state": "^0.1.26",
     "@stripe/stripe-js": "^1.22.0",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.2",
@@ -130,10 +130,10 @@
     "@srclaunch/actions": "^0.1.3",
     "@srclaunch/exceptions": "^0.1.6",
     "@srclaunch/i18n": "^0.1.2",
-    "@srclaunch/icons": "^0.1.3",
+    "@srclaunch/icons": "^0.1.6",
     "@srclaunch/logger": "^0.1.2",
     "@srclaunch/react-hooks": "^0.1.2",
-    "@srclaunch/themes": "^0.1.5",
+    "@srclaunch/themes": "^0.1.6",
     "@srclaunch/transform": "^0.1.2",
     "@srclaunch/validation": "^0.1.2",
     "@stripe/react-stripe-js": "^1.7.0",
