--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "lint:eslint": "yarn eslint ./src --ext js,ts,tsx --max-warnings 0",
     "lint:stylelint": "yarn stylelint '**/*.ts[x]'",
     "lint": "yarn lint:eslint && yarn lint:stylelint",
+    "preview": "yarn build && vite preview --host --port 8081",
     "push": "git push --follow-tags origin main",
     "release": "yarn standard-version && git push --follow-tags origin main",
     "storybook:build": "yarn build-storybook",
@@ -64,7 +65,7 @@
     "@srclaunch/cli": "^0.1.18",
     "@srclaunch/dx": "^0.1.6",
     "@srclaunch/types": "^0.1.2",
-    "@srclaunch/web-application-state": "^0.1.42",
+    "@srclaunch/web-application-state": "^0.1.48",
     "@stripe/stripe-js": "^1.22.0",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.4",
