--- a/package.json
+++ b/package.json
@@ -149,6 +149,7 @@
     "hex-rgb": "^5.0.0",
     "i18n-iso-countries": "^7.3.0",
     "luxon": "^2.3.0",
+    "nanoid": "^3.3.1",
     "pluralize": "^8.0.0",
     "query-string": "^7.1.1",
     "react-colorful": "^5.5.1",
