--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "@types/pluralize": "^0.0.29",
     "@types/react": "^17.0.40",
     "@types/react-dom": "^17.0.11",
+    "@types/react-is": "^17",
     "@types/react-router": "^5.1.18",
     "@types/react-router-dom": "^5.3.3",
     "@types/styled-components": "^5.1.24",
@@ -157,6 +158,7 @@
     "react-currency-input-field": "^3.6.4",
     "react-date-picker": "8.3.6",
     "react-dropzone": "^11.7.0",
+    "react-is": "^17.0.2",
     "react-password-strength-bar": "^0.4.0",
     "react-syntax-highlighter": "^15.5.0",
     "rgb-hex": "^4.0.0"
