--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
     "@srclaunch/logger": "0.1.91",
     "@srclaunch/themes": "0.1.37",
     "@srclaunch/web-environment": "0.1.37",
-    "@srclaunch/validation": "0.1.30"
+    "@srclaunch/validation": "0.1.30",
+    "styled-components": "5.3.5"
   },
   "devDependencies": {
     "@microsoft/eslint-plugin-sdl": "0.2.0",
@@ -95,7 +96,6 @@
     "history": "5.3.0",
     "react-router": "6.3.0",
     "react-router-dom": "6.3.0",
-    "redux": "4.2.0",
-    "styled-components": "5.3.5"
+    "redux": "4.2.0"
   }
 }
