--- a/package.json
+++ b/package.json
@@ -36,10 +36,70 @@
     "release": "yarn srclaunch release"
   },
   "dependencies": {
-    "history": "5.3.0"
+    "amazon-cognito-identity-js": "^5.2.8",
+    "history": "5.3.0",
+    "crypto-js": "^4.1.1",
+    "luxon": "^2.3.2",
+    "nanoid": "^3.3.3",
+    "@srclaunch/exceptions": "^0.1.71",
+    "@srclaunch/http-client": "^0.1.22",
+    "@srclaunch/i18n": "^0.1.6",
+    "@srclaunch/logger": "^0.1.83",
+    "@srclaunch/themes": "^0.1.35",
+    "@srclaunch/web-environment": "^0.1.21",
+    "@srclaunch/validation": "^0.1.28",
+    "styled-components": "^5.3.5"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "@microsoft/eslint-plugin-sdl": "^0.2.0",
+    "eslint": "^8.14.0",
+    "eslint-import-resolver-typescript": "^2.7.1",
+    "eslint-plugin-eslint-comments": "^3.2.0",
+    "eslint-plugin-functional": "^4.2.1",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-only-warn": "^1.0.3",
+    "eslint-plugin-regexp": "^1.7.0",
+    "eslint-plugin-simple-import-sort": "^7.0.0",
+    "eslint-plugin-sort-keys-fix": "^1.1.2",
+    "eslint-plugin-sort-requires": "^2.1.0",
+    "eslint-plugin-unicorn": "^42.0.0",
+    "@types/jest": "^27.4.1",
+    "eslint-plugin-jest": "^26.1.5",
+    "ts-jest": "^27.1.4",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.1.1",
+    "@testing-library/user-event": "^14.1.1",
+    "eslint-plugin-testing-library": "^5.3.1",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "prettier": "^2.6.2",
+    "@srclaunch/cli": "^0.1.346",
+    "@srclaunch/dx": "^0.1.52",
+    "@srclaunch/types": "^0.1.117",
+    "eslint-config-stylelint": "^15.0.0",
+    "stylelint": "^14.8.1",
+    "stylelint-config-idiomatic-order": "^8.1.0",
+    "stylelint-config-prettier": "^9.0.3",
+    "stylelint-config-recommended": "^7.0.0",
+    "stylelint-order": "^5.0.0",
+    "c8": "^7.11.2",
+    "@typescript-eslint/eslint-plugin": "^5.21.0",
+    "@typescript-eslint/parser": "^5.21.0",
+    "typescript": "^4.6.4",
+    "@types/luxon": "^2.3.1",
+    "@types/styled-components": "^5.1.25",
+    "eslint-plugin-better-styled-components": "^1.1.2",
+    "stylelint-config-styled-components": "^0.1.1"
+  },
   "peerDependencies": {
-    "history": "5.3.0"
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0",
+    "@reduxjs/toolkit": "^1.8.1",
+    "react-redux": "^8.0.1",
+    "history": "5.3.0",
+    "react-router": "^6.3.0",
+    "react-router-dom": "^6.3.0",
+    "redux": "^4.2.0"
   }
 }
