--- a/package.json
+++ b/package.json
@@ -36,11 +36,6 @@
     "release": "yarn srclaunch release"
   },
   "dependencies": {
-    "amazon-cognito-identity-js": "^5.2.8",
-    "history": "5.3.0",
-    "crypto-js": "^4.1.1",
-    "luxon": "^2.3.2",
-    "nanoid": "^3.3.3",
     "@srclaunch/exceptions": "^0.1.71",
     "@srclaunch/http-client": "^0.1.22",
     "@srclaunch/i18n": "^0.1.6",
@@ -48,6 +43,12 @@
     "@srclaunch/themes": "^0.1.35",
     "@srclaunch/web-environment": "^0.1.21",
     "@srclaunch/validation": "^0.1.28",
+    "amazon-cognito-identity-js": "^5.2.8",
+    "history": "5.3.0",
+    "crypto-js": "^4.1.1",
+    "luxon": "^2.3.2",
+    "nanoid": "^3.3.3",
+    "react": "^18.1.0",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
@@ -88,14 +89,20 @@
     "@typescript-eslint/parser": "^5.21.0",
     "typescript": "^4.6.4",
     "@types/luxon": "^2.3.1",
+    "@types/react": "^18.0.8",
+    "@types/react-dom": "^18.0.3",
+    "@types/react-is": "^17.0.3",
+    "eslint-config-react-app": "^7.0.1",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-react": "^7.29.4",
+    "eslint-plugin-react-hooks": "^4.5.0",
     "@types/styled-components": "^5.1.25",
     "eslint-plugin-better-styled-components": "^1.1.2",
     "stylelint-config-styled-components": "^0.1.1"
   },
   "peerDependencies": {
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0",
     "@reduxjs/toolkit": "^1.8.1",
+    "react-dom": "^18.1.0",
     "react-redux": "^8.0.1",
     "history": "5.3.0",
     "react-router": "^6.3.0",
